# thesanskritchannel_projects

./: .gitignore  .prettierignore  .prettierrc  LICENCE  README.md  Technical_Details.md  helper_cli  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  svelte.config.js  tsconfig.json  vite.config.ts
.agents/: AGENTS.md
.devcontainer/: devcontainer.json
.github/workflows/: backup.yml  checks.yml  commit_trans.yml  deploy_projects.yml  deploy_redirect.yml  deploy_site.yml  site_checks.yml  text_cache.yml  texts_ci.yml
app/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  package.json  svelte.config.js  vite.config.ts
app/src/: app.css  app.d.ts  app.scss  constants.ts  hooks.server.ts  sync_private_env.server.ts
data/: README.md
data/1. ramayanam/: common.py  get_json.py  get_raw_data.py  get_text.py  ramayanam_map.json  run_tests.py
data/2. bhagavadgita/: bhagavadgita_map.json  extract.py
data/3. narayaneeyam/: common.py  extract.py  narayaneeyam_map.json
data/4. shiva-tandava-stotram/: extract.py  shivatandavastotram_map.json
data/4. shivatandavastotram/: data.json  shivatandavastotram_map.json  text.txt
data/5. saundarya-lahari/: extract.py
data/5. saundaryalahari/: data.json  (+3 more)
redirect/: .env.example  README.md  package.json  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
site/: .env.example  .prettierignore  .prettierrc  Plan.md  README.md  astro.config.mjs  bunfig.toml  components.json  package.json  tsconfig.json  vitest.config.ts
src/: app.css  app.html  hooks.server.ts  t.ts
(+6633 files in other folders)
